# aiNews

./: .env.example  .gitignore  .helpbuildfile  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT_ACTIVITY.md  Dockerfile  GO_TO_MARKET_PLAN.md  README.md  agent.py  app.py  articles_cache.json  bandit.yaml  dailyai.db  dailyai.db-shm  dailyai.db-wal  digest.py  profiles.json  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
services/: __init__.py  api_keys.py  config.py  database.py  models.py  news_core.py  profiles.py  security.py  store.py
src/dailyai/: __init__.py  __main__.py  config.py
src/dailyai/api/: __init__.py  middleware.py  routes.py
src/dailyai/graph/: __init__.py  pipeline.py  state.py
src/dailyai/graph/nodes/: __init__.py  collector.py  curator.py  deduplicator.py  formatter.py  personalizer.py  sentiment.py  threader.py  trust.py
src/dailyai/llm/: __init__.py  prompts.py  provider.py
src/dailyai/services/: analytics.py  digest.py  media_cache.py  news.py  personalizer_llm.py  profiles.py  scheduler.py
src/dailyai/storage/: __init__.py  backend.py  models.py  sqlite.py  supabase.py  supabase_migrate.py
src/dailyai/ui/: __init__.py  app.py  i18n.py
static/: app.js  manifest.json  styles.css  sw.js
supabase/: bootstrap.sql
supabase/migrations/: 0001_analytics.sql  0002_rss_feeds.sql
templates/: api_docs.html  datenschutz.html  impressum.html  index.html  terms.html
tests/: __init__.py  test_agent.py  test_api_keys.py  test_comprehensive.py  test_function_health.py  test_onboarding.py
tests/test_graph/: __init__.py
(+9 files in other folders)
